SERVER-81108 Sharded $search fails tassert in writeQueryStats